rhai/codegen/ui_tests/export_mod_cfg.stderr
error: cfg attributes not allowed on this item
  --> $DIR/export_mod_cfg.rs:11:1
   |
11 | #[cfg(not(feature = "foo"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> $DIR/export_mod_cfg.rs:23:8
   |
23 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of undeclared crate or module `test_mod`
